--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,17 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "textual>=6.6.0",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+]
