--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-google-community>=3.0.1",
     "langchain-google-genai>=3.1.0",
     "langchain-ollama>=1.0.0",
+    "langchain-openai>=1.1.0",
     "langchain-tavily>=0.2.13",
     "langgraph>=1.0.3",
     "ollama>=0.6.1",
