--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,10 @@ asyncio_default_fixture_loop_scope = "function"
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.1.0",
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
+    "ruff>=0.9.9",
 ]
